@@ -213,7 +213,6 @@ import megamek.common.containers.PlayerIDandList;
 import megamek.common.event.GameListener;
 import megamek.common.event.GameVictoryEvent;
 import megamek.common.logging.DefaultMmLogger;
-import megamek.common.logging.LogLevel;
 import megamek.common.logging.MMLogger;
 import megamek.common.net.*;
 import megamek.common.options.GameOptions;
@@ -450,6 +449,7 @@ public class Server extends SocketServer {
 
     private List<DemolitionCharge> explodingCharges = new ArrayList<>();
 
+                getLogger().info(getClass(), "disconnected(DisconnectedEvent)", "s: connection " + conn.getId() + " disconnectd");
     /**
      * Used to ensure only one thread at a time is accessing this particular
      * instance of the server.
@@ -484,7 +484,7 @@ public class Server extends SocketServer {
         changePhase(IGame.Phase.PHASE_LOUNGE);
 
         // display server start text
-        logInfo(METHOD_NAME, "s: starting a new server...");
+        getLogger().info(getClass(), METHOD_NAME, "s: starting a new server...");
 
         try {
             StringBuilder sb = new StringBuilder();
@@ -501,12 +501,12 @@ public class Server extends SocketServer {
                 sb.append("\n");
             }
 
-            logInfo(METHOD_NAME, sb.toString());
+            getLogger().info(getClass(), METHOD_NAME, sb.toString());
         } catch (UnknownHostException e) {
             // oh well.
         }
 
-        logInfo(METHOD_NAME, "s: password = " + this.password);
+        getLogger().info(getClass(), METHOD_NAME, "s: password = " + this.password);
 
         // register commands
         registerCommand(new DefeatCommand(this));
@@ -579,73 +579,6 @@ public class Server extends SocketServer {
         }
 
         return logger;
-    }
-
-    // Logging convenience methods
-
-    /**
-     * Write information to the logs
-     *
-     * @param methodName Name of the method logging is coming from
-     * @param message Message to log
-     */
-    private void logInfo(String methodName, String message) {
-        getLogger().log(getClass(), methodName, LogLevel.INFO, message);
-    }
-
-    /**
-     * Write debug information to the logs.
-     *
-     * @param methodName Name of the method logging is coming from
-     * @param message Message to log
-     */
-    @SuppressWarnings("unused")
-    private void logDebug(String methodName, String message) {
-        getLogger().log(getClass(), methodName, LogLevel.DEBUG, message);
-    }
-
-    /**
-     * Write warnings to the logs
-     *
-     * @param methodName Name of the method logging is coming from
-     * @param message Message to log
-     */
-    private void logWarning(String methodName, String message) {
-        getLogger().log(getClass(), methodName, LogLevel.WARNING, message);
-    }
-
-    /**
-     * Write errors to the logs
-     *
-     * @param methodName Name of the method logging is coming from
-     * @param message Message to log
-     */
-    private void logError(String methodName, String message) {
-        logError(methodName, message, null);
-    }
-
-    /**
-     * Write errors to the logs.
-     *
-     * @param methodName Name of the method logging is coming from
-     * @param message Message to log
-     * @param e The exception that caused the error
-     */
-    private void logError(String methodName, String message, Throwable e) {
-        if (null != e) {
-            getLogger().log(getClass(), methodName, LogLevel.ERROR, message, e);
-        } else {
-            getLogger().log(getClass(), methodName, LogLevel.ERROR, message);
-        }
-    }
-
-    /**
-     * Write errors to the log.
-     * @param methodName Name of the method logging is coming from
-     * @param e The exception that caused the error
-     */
-    private void logError(String methodName, Throwable e) {
-        getLogger().log(getClass(), methodName, LogLevel.ERROR, e);
     }
 
     /**
@@ -905,8 +838,8 @@ public class Server extends SocketServer {
         if (!version.equals(MegaMek.VERSION)) {
             buf.append("Client/Server version mismatch. Server reports: "
                        + MegaMek.VERSION + ", Client reports: " + version);
-            logError(METHOD_NAME,
-                    "Client/Server Version Mismatch -- Client: " + version + " Server: " + MegaMek.VERSION);
+            getLogger().error(getClass(), METHOD_NAME, 
+                              "Client/Server Version Mismatch -- Client: " + version + " Server: " + MegaMek.VERSION);
             needs = true;
         }
         // print a message indicating client doesn't have jar file
@@ -916,7 +849,7 @@ public class Server extends SocketServer {
                 buf.append(System.lineSeparator());
             }
             buf.append("Client Checksum is null. Client may not have a jar file");
-            System.out.println("ERROR: Client does not have a jar file");
+            getLogger().error(getClass(), METHOD_NAME, "Client does not have a jar file");
             needs = true;
         // print message indicating server doesn't have jar file
         } else if (serverChecksum == null) {
@@ -925,7 +858,7 @@ public class Server extends SocketServer {
                 buf.append(System.lineSeparator());
             }
             buf.append("Server Checksum is null. Server may not have a jar file");
-            System.out.println("ERROR: Server does not have a jar file");
+            getLogger().error(getClass(), METHOD_NAME, "Server does not have a jar file");
             needs = true;
         // print message indicating a client/server checksum mismatch
         } else if (!clientChecksum.equals(serverChecksum)) {
@@ -935,7 +868,7 @@ public class Server extends SocketServer {
             }
             buf.append("Client/Server checksum mismatch. Server reports: " + serverChecksum + ", Client reports: "
                     + clientChecksum);
-            logError(METHOD_NAME,
+            getLogger().error(getClass(), METHOD_NAME,
                     "Client/Server Checksum Mismatch -- Client: " + clientChecksum + " Server: " + serverChecksum);
 
             needs = true;
@@ -950,7 +883,7 @@ public class Server extends SocketServer {
                         + buf.toString());
             }
         } else {
-            logInfo(METHOD_NAME, "SUCCESS: Client/Server Version (" + version + ") and Checksum (" + clientChecksum + ") matched");
+            getLogger().info(getClass(), METHOD_NAME, "SUCCESS: Client/Server Version (" + version + ") and Checksum (" + clientChecksum + ") matched");
         }
     }
 
@@ -966,7 +899,7 @@ public class Server extends SocketServer {
 
         // this had better be from a pending connection
         if (conn == null) {
-            logWarning(METHOD_NAME, "Got a client name from a non-pending connection");
+            getLogger().warning(getClass(), METHOD_NAME, "Got a client name from a non-pending connection");
             return;
         }
 
@@ -1039,7 +972,7 @@ public class Server extends SocketServer {
         player = getPlayer(connId);
         if (null != player) {
             String who = player.getName() + " connected from " + getClient(connId).getInetAddress();
-            logInfo(METHOD_NAME, "s: player #" + connId + ", " + who);
+            getLogger().info(getClass(), METHOD_NAME, "s: player #" + connId + ", " + who);
             sendServerChat(who);
 
         } // Found the player
@@ -1077,7 +1010,7 @@ public class Server extends SocketServer {
                     break;
                 default:
                     send(connId, new Packet(Packet.COMMAND_ROUND_UPDATE,
-                                            new Integer(game.getRoundCount())));
+                                            Integer.valueOf(game.getRoundCount())));
                     send(connId, createBoardPacket());
                     send(connId, createAllReportsPacket(player));
 
@@ -1254,7 +1187,7 @@ public class Server extends SocketServer {
         sendServerChat(player.getName() + " disconnected.");
 
         // log it
-        logInfo("disconnected(IPlayer)", "s: removed player " + player.getName());
+        getLogger().info(getClass(), "disconnected(IPlayer)", "s: removed player " + player.getName());
 
         // Reset the game after Elvis has left the building.
         if (0 == game.getNoOfPlayers()) {
@@ -1309,7 +1242,7 @@ public class Server extends SocketServer {
 
         // Write end of game to stdout so controlling scripts can rotate logs.
         SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss z");
-        logInfo("resetGame()", format.format(new Date()) + " END OF GAME");
+        getLogger().info(getClass(), "", format.format(new Date()) + " END OF GAME");
 
         changePhase(IGame.Phase.PHASE_LOUNGE);
     }
@@ -1358,7 +1291,7 @@ public class Server extends SocketServer {
             sendChat(connId, "***Server", "Savegame has been sent to you.");
             fin.close();
         } catch (Exception e) {
-            logError("sendSaveGame(int,String,String)",
+            getLogger().error(getClass(), "sendSaveGame(int,String,String)",
                     "Unable to load file: " + localFile, e);
         }
     }
@@ -1395,7 +1328,7 @@ public class Server extends SocketServer {
             writer.close();
             gzo.close();
         } catch (Exception e) {
-            logError("saveGame(String,boolean)",
+            getLogger().error(getClass(), "saveGame(String,boolean)",
                     "Unable to save file: " + sFinalFile, e);
         }
 
@@ -1456,7 +1389,8 @@ public class Server extends SocketServer {
      */
     public boolean loadGame(File f, boolean sendInfo) {
         final String METHOD_NAME = "loadGame(File,boolean)";
-        logInfo(METHOD_NAME, "s: loading saved game file '" + f + "'"); //$NON-NLS-1$
+        getLogger().info(getClass(), METHOD_NAME, "s: loading saved game file '" + f + "'"); //$NON-NLS-1$
+
         IGame newGame;
         try(InputStream is = new GZIPInputStream(new FileInputStream(f))) {
             XStream xstream = new XStream();
@@ -1498,7 +1432,7 @@ public class Server extends SocketServer {
             });
             newGame = (IGame) xstream.fromXML(is);
         } catch (Exception e) {
-            logError(METHOD_NAME, "Unable to load file: " + f, e); //$NON-NLS-1$
+            getLogger().error(getClass(), METHOD_NAME, "Unable to load file: " + f, e); //$NON-NLS-1$
             return false;
         }
 
@@ -1580,7 +1514,7 @@ public class Server extends SocketServer {
             connectionIds.put(newId, conn);
 
             game.getPlayer(newId).setGhost(false);
-            send(newId, new Packet(Packet.COMMAND_LOCAL_PN, new Integer(newId)));
+            send(newId, new Packet(Packet.COMMAND_LOCAL_PN, Integer.valueOf(newId)));
         }
 
         // It's possible we have players not in the saved game, add 'em
@@ -1594,7 +1528,7 @@ public class Server extends SocketServer {
             IPlayer newPlayer = addNewPlayer(newId, name);
             newPlayer.setObserver(true);
             connectionIds.put(newId,  conn);
-            send(newId, new Packet(Packet.COMMAND_LOCAL_PN, new Integer(newId)));
+            send(newId, new Packet(Packet.COMMAND_LOCAL_PN, Integer.valueOf(newId)));
         }
 
         // Ensure all clients are up-to-date on player info
@@ -1651,7 +1585,7 @@ public class Server extends SocketServer {
      * Returns a connection, indexed by id
      */
     public IConnection getConnection(int connId) {
-        return connectionIds.get(new Integer(connId));
+        return connectionIds.get(Integer.valueOf(connId));
     }
 
     /**
@@ -2471,7 +2405,7 @@ public class Server extends SocketServer {
                     checkForSpaceDeath();
                 }
 
-                logInfo(METHOD_NAME, "Round " + game.getRoundCount() + " memory usage: " + MegaMek.getMemoryUsed());
+                getLogger().info(getClass(), METHOD_NAME, "Round " + game.getRoundCount() + " memory usage: " + MegaMek.getMemoryUsed());
                 break;
             case PHASE_DEPLOY_MINEFIELDS:
                 checkForObservers();
@@ -2681,6 +2615,12 @@ public class Server extends SocketServer {
                     if (currentSI > 0) {
                         a.setSI(currentSI);
                     }
+                    //Fix for #587. MHQ tracks fighters at standard scale and doesn't (currently)
+                    //track squadrons. Squadrons don't save to MUL either, so... only convert armor for JS/WS/SS?
+                    //Do we ever need to save capital fighter armor to the final MUL or entityStatus?
+                    if (!entity.hasETypeFlag(Entity.ETYPE_JUMPSHIP)) {
+                        scale = 1;
+                    }
                     if (scale > 1) {
                         for (int loc = 0; loc < entity.locations(); loc++) {
                             int currentArmor = entity.getArmor(loc) / scale;
@@ -2732,25 +2672,30 @@ public class Server extends SocketServer {
         if (!game.hasMoreTurns()) {
             return false;
         }
+        
         for (Iterator<Entity> e = game.getEntities(); e.hasNext();) {
             Entity entity = e.next();
             for (Mounted m : entity.getAmmo()) {
                 AmmoType atype = (AmmoType) m.getType();
-                if (((atype.getAmmoType() == AmmoType.T_LRM)
+                
+                // per errata, TAG will spot for LRMs and such
+                if ((atype.getAmmoType() == AmmoType.T_LRM)
                         || (atype.getAmmoType() == AmmoType.T_LRM_IMP)
                         || (atype.getAmmoType() == AmmoType.T_MML)
                         || (atype.getAmmoType() == AmmoType.T_NLRM)
-                        || (atype.getAmmoType() == AmmoType.T_MEK_MORTAR))
-                        && (atype.getMunitionType() == AmmoType.M_SEMIGUIDED)) {
+                        || (atype.getAmmoType() == AmmoType.T_MEK_MORTAR)) {
                     return true;
                 }
+                
                 if (((atype.getAmmoType() == AmmoType.T_ARROW_IV)
-                        || (atype.getAmmoType() == AmmoType.T_LONG_TOM) || (atype
-                        .getAmmoType() == AmmoType.T_SNIPER))
+                        || (atype.getAmmoType() == AmmoType.T_LONG_TOM) 
+                        || (atype.getAmmoType() == AmmoType.T_SNIPER)
+                        || (atype.getAmmoType() == AmmoType.T_THUMPER))
                         && (atype.getMunitionType() == AmmoType.M_HOMING)) {
                     return true;
                 }
             }
+            
             for (Mounted b : entity.getBombs()) {
                 if (!b.isDestroyed()
                     && (b.getUsableShotsLeft() > 0)
@@ -2759,6 +2704,7 @@ public class Server extends SocketServer {
                 }
             }
         }
+        
         // loop through all current attacks
         // if there are any that use homing ammo, we are playable
         // we need to do this because we might have a homing arty shot in flight
@@ -3259,7 +3205,7 @@ public class Server extends SocketServer {
      */
     private void incrementAndSendGameRound() {
         game.incrementRoundCount();
-        send(new Packet(Packet.COMMAND_ROUND_UPDATE, new Integer(
+        send(new Packet(Packet.COMMAND_ROUND_UPDATE, Integer.valueOf(
                 game.getRoundCount())));
     }
 
@@ -3811,7 +3757,7 @@ public class Server extends SocketServer {
                 for (; playerProtos.hasNext(); ) {
                     Entity proto = playerProtos.next();
                     numPlayerProtos++;
-                    points.add(new Integer(proto.getUnitNumber()));
+                    points.add(Integer.valueOf(proto.getUnitNumber()));
                 }
                 int numProtoUnits = (int) Math.ceil(numPlayerProtos / 5.0);
                 if (!protosMoveEven) {
@@ -5205,7 +5151,7 @@ public class Server extends SocketServer {
 
         // is this the right phase?
         if (game.getPhase() != IGame.Phase.PHASE_MOVEMENT) {
-            logError(METHOD_NAME, "Server got movement packet in wrong phase");
+            getLogger().error(getClass(), METHOD_NAME, "Server got movement packet in wrong phase");
             return;
         }
 
@@ -5221,7 +5167,7 @@ public class Server extends SocketServer {
             } else {
                 msg += ", Entity was null!";
             }
-            logError(METHOD_NAME, msg);
+            getLogger().error(getClass(), METHOD_NAME, msg);
             return;
         }
 
@@ -6104,7 +6050,7 @@ public class Server extends SocketServer {
             if (null == nextPos) {
                 // But I don't trust the assumption fully.
                 // Report the error and try to continue.
-                logError(METHOD_NAME,
+                getLogger().error(getClass(), METHOD_NAME,
                         "The skid of " + entity.getShortName()
                                 + " should displace " + target.getShortName()
                                 + " in hex " + curPos.getBoardNum()
@@ -7729,7 +7675,7 @@ public class Server extends SocketServer {
                             if (!launchUnit(entity, fighter, curPos, curFacing,
                                     step.getVelocity(), step.getAltitude(),
                                     step.getVectors(), bonus)) {
-                                logError(METHOD_NAME, "Server was told to unload " + fighter.getDisplayName()
+                                getLogger().error(getClass(), METHOD_NAME, "Server was told to unload " + fighter.getDisplayName()
                                         + " from " + entity.getDisplayName() + " into " + curPos.getBoardNum());
                             }
                             if (doorReport != null) {
@@ -7764,7 +7710,7 @@ public class Server extends SocketServer {
                             if (!launchUnit(entity, ds, curPos, curFacing,
                                     step.getVelocity(), step.getAltitude(),
                                     step.getVectors(), 0)) {
-                                logError(METHOD_NAME,
+                                getLogger().error(getClass(), METHOD_NAME,
                                         "Error! Server was told to unload "
                                                 + ds.getDisplayName() + " from "
                                                 + entity.getDisplayName()
@@ -7920,7 +7866,7 @@ public class Server extends SocketServer {
                     } else {
                         String message = "Illegal charge!! " + entity.getDisplayName() +
                                 " is attempting to charge a null target!";
-                        logInfo(METHOD_NAME, message);
+                        getLogger().info(getClass(), METHOD_NAME, message);
                         sendServerChat(message);
                         return;
                     }
@@ -7938,7 +7884,7 @@ public class Server extends SocketServer {
                         charge = raa;
                     } else {
                         String message = "Illegal charge!! " + entity.getDisplayName() + " is attempting to charge a null target!";
-                        logInfo(METHOD_NAME, message);
+                        getLogger().info(getClass(), METHOD_NAME, message);
                         sendServerChat(message);
                         return;
                     }
@@ -8758,7 +8704,7 @@ public class Server extends SocketServer {
                         if (!entity.canLoad(loaded)
                                 || !loaded.isLoadableThisTurn()) {
                             // Something is fishy in Denmark.
-                            logError(METHOD_NAME, entity.getShortName() + " can not load " + loaded.getShortName());
+                            getLogger().error(getClass(), METHOD_NAME, entity.getShortName() + " can not load " + loaded.getShortName());
                             loaded = null;
                         } else {
                             // Have the deployed unit load the indicated unit.
@@ -8777,7 +8723,7 @@ public class Server extends SocketServer {
 
                 // We were supposed to find someone to load.
                 if (loaded == null) {
-                    logError(METHOD_NAME,
+                    getLogger().error(getClass(), METHOD_NAME,
                             "Could not find unit for " + entity.getShortName() + " to load in " + curPos);
                 }
 
@@ -8792,7 +8738,7 @@ public class Server extends SocketServer {
 
                 // This should never ever happen, but just in case...
                 if (loaded == null) {
-                    logError(METHOD_NAME,
+                    getLogger().error(getClass(), METHOD_NAME,
                         "Could not find unit for " + entity.getShortName() + " to tow.");
                     continue;
                 }
@@ -8804,7 +8750,7 @@ public class Server extends SocketServer {
                 //Do we need it here for safety, client/server sync or can this be further streamlined?
                 if (!entity.canTow(loaded.getId())) {
                     // Something is fishy in Denmark.
-                    logError(METHOD_NAME, entity.getShortName() + " can not tow " + loaded.getShortName());
+                    getLogger().error(getClass(), METHOD_NAME, entity.getShortName() + " can not tow " + loaded.getShortName());
                     loaded = null;
                 } else {
                     // Have the deployed unit load the indicated unit.
@@ -8819,7 +8765,7 @@ public class Server extends SocketServer {
                     Entity dropship = (Entity) mountee;
                     if (!dropship.canLoad(entity)) {
                         // Something is fishy in Denmark.
-                        logError(METHOD_NAME,
+                        getLogger().error(getClass(), METHOD_NAME,
                                 dropship.getShortName() + " can not load " + entity.getShortName());
                     } else {
                         // Have the indicated unit load this unit.
@@ -8913,7 +8859,7 @@ public class Server extends SocketServer {
                 }
                 if (!unloadUnit(entity, unloaded, unloadPos, unloadFacing,
                         step.getElevation())) {
-                    logError(METHOD_NAME,
+                    getLogger().error(getClass(), METHOD_NAME,
                             "Server was told to unload "
                                     + unloaded.getDisplayName() + " from "
                                     + entity.getDisplayName() + " into "
@@ -8968,7 +8914,7 @@ public class Server extends SocketServer {
                     unloadPos = step.getTargetPosition();
                 }
                 if (!disconnectUnit(entity, unloaded, unloadPos)) {
-                    logError(METHOD_NAME,
+                    getLogger().error(getClass(), METHOD_NAME,
                             "Server was told to disconnect "
                                     + unloaded.getDisplayName() + " from "
                                     + entity.getDisplayName() + " into "
@@ -10275,7 +10221,7 @@ public class Server extends SocketServer {
                 carrier.setSwarmAttackerId(Entity.NONE);
                 rider.setSwarmTargetId(Entity.NONE);
             } else if (!unloadUnit(carrier, rider, curPos, curFacing, 0)) {
-                logError("checkDropBAFromConverting(Entity,Entity,Coords,int,boolean,boolean,boolean)",
+                getLogger().error(getClass(), "checkDropBAFromConverting(Entity,Entity,Coords,int,boolean,boolean,boolean)",
                         "Server was told to unload "
                                 + rider.getDisplayName() + " from "
                                 + carrier.getDisplayName() + " into "
@@ -10332,13 +10278,13 @@ public class Server extends SocketServer {
                     int cfrType = rp.packet.getIntValue(0);
                     // Make sure we got the right type of response
                     if (cfrType != Packet.COMMAND_CFR_HIDDEN_PBS) {
-                        logError(METHOD_NAME,
+                        getLogger().error(getClass(), METHOD_NAME,
                                 "Expected a " + "COMMAND_CFR_HIDDEN_PBS CFR packet, " + "received: " + cfrType);
                         continue;
                     }
                     // Check packet came from right ID
                     if (rp.connId != hidden.getOwnerId()) {
-                        logError(METHOD_NAME,
+                        getLogger().error(getClass(), METHOD_NAME,
                                 "Exected a " + "COMMAND_CFR_HIDDEN_PBS CFR packet " + "from player  " + hidden.getOwnerId()
                                 + " but instead it came from player " + rp.connId);
                         continue;
@@ -10445,13 +10391,13 @@ public class Server extends SocketServer {
                     int cfrType = rp.packet.getIntValue(0);
                     // Make sure we got the right type of response
                     if (cfrType != Packet.COMMAND_CFR_TELEGUIDED_TARGET) {
-                        logError(METHOD_NAME,
+                        getLogger().error(getClass(), METHOD_NAME,
                                 "Expected a " + "COMMAND_CFR_TELEGUIDED_TARGET CFR packet, " + "received: " + cfrType);
                         continue;
                     }
                     // Check packet came from right ID
                     if (rp.connId != playerId) {
-                        logError(METHOD_NAME,
+                        getLogger().error(getClass(), METHOD_NAME,
                                 "Exected a " + "COMMAND_CFR_TELEGUIDED_TARGET CFR packet " + "from player  " + playerId
                                 + " but instead it came from player " + rp.connId);
                         continue;
@@ -10782,8 +10728,10 @@ public class Server extends SocketServer {
      */
 
     public void deliverMissileSmoke(Coords coords, int smokeType, Vector<Report> vPhaseReport) {
-        Report r = new Report(5185, Report.PUBLIC);
+        Report r = new Report(5183, Report.PUBLIC);
         r.indent(2);
+        //Report either light or heavy smoke, as appropriate
+        r.choose(smokeType == SmokeCloud.SMOKE_LIGHT);
         r.add(coords.getBoardNum());
         vPhaseReport.add(r);
         createSmoke(coords, smokeType, 3);
@@ -13170,7 +13118,7 @@ public class Server extends SocketServer {
 
         // Handle null hexes.
         if ((srcHex == null) || (destHex == null)) {
-            logError(METHOD_NAME, "Can not displace " + entity.getShortName()
+            getLogger().error(getClass(), METHOD_NAME, "Can not displace " + entity.getShortName()
                     + " from " + src + " to " + dest + ".");
             return vPhaseReport;
         }
@@ -13375,7 +13323,7 @@ public class Server extends SocketServer {
                             int cfrType = (int) rp.packet.getData()[0];
                             // Make sure we got the right type of response
                             if (cfrType != Packet.COMMAND_CFR_DOMINO_EFFECT) {
-                                logError(METHOD_NAME,
+                                getLogger().error(getClass(), METHOD_NAME,
                                         "Excepted a COMMAND_CFR_DOMINO_EFFECT CFR packet, "
                                                 + "received: " + cfrType);
                                 throw new IllegalStateException();
@@ -13540,7 +13488,7 @@ public class Server extends SocketServer {
 
         // is this the right phase?
         if (game.getPhase() != IGame.Phase.PHASE_DEPLOYMENT) {
-            logError(METHOD_NAME, "server got deployment packet in wrong phase");
+            getLogger().error(getClass(), METHOD_NAME, "server got deployment packet in wrong phase");
             return;
         }
 
@@ -13564,7 +13512,7 @@ public class Server extends SocketServer {
             } else {
                 msg += ", Entity was null!";
             }
-            logError(METHOD_NAME, msg);
+            getLogger().error(getClass(), METHOD_NAME, msg);
             send(connId, createTurnVectorPacket());
             send(connId, createTurnIndexPacket(turn.getPlayerNum()));
             return;
@@ -13607,7 +13555,7 @@ public class Server extends SocketServer {
             } else {
                 msg += ", Entity was null!";
             }
-            logError(METHOD_NAME, msg);
+            getLogger().error(getClass(), METHOD_NAME, msg);
             return;
         }
 
@@ -13626,7 +13574,7 @@ public class Server extends SocketServer {
             } else {
                 msg += ", Entity was null!";
             }
-            logError(METHOD_NAME, msg);
+            getLogger().error(getClass(), METHOD_NAME, msg);
             send(connId, createTurnVectorPacket());
             send(connId, createTurnIndexPacket(connId));
             return;
@@ -13665,7 +13613,7 @@ public class Server extends SocketServer {
             }
             if (loaded.getPosition() != null) {
                 // Something is fishy in Denmark.
-                logError(METHOD_NAME, entity + " can not load entity #" + loaded);
+                getLogger().error(getClass(), METHOD_NAME, entity + " can not load entity #" + loaded);
                 break;
             }
             // Have the deployed unit load the indicated unit.
@@ -13822,7 +13770,7 @@ public class Server extends SocketServer {
 
         // is this the right phase?
         if (game.getPhase() != IGame.Phase.PHASE_SET_ARTYAUTOHITHEXES) {
-            logError(METHOD_NAME, "server got set artyautohithexespacket in wrong phase");
+            getLogger().error(getClass(), METHOD_NAME, "server got set artyautohithexespacket in wrong phase");
             return;
         }
         game.getPlayer(playerId).setArtyAutoHitHexes(artyAutoHitHexes);
@@ -13853,7 +13801,7 @@ public class Server extends SocketServer {
 
         // is this the right phase?
         if (game.getPhase() != IGame.Phase.PHASE_DEPLOY_MINEFIELDS) {
-            logError(METHOD_NAME, "server got deploy minefields packet in wrong phase");
+            getLogger().error(getClass(), METHOD_NAME, "server got deploy minefields packet in wrong phase");
             return;
         }
 
@@ -13937,7 +13885,7 @@ public class Server extends SocketServer {
             && (game.getPhase() != IGame.Phase.PHASE_PHYSICAL)
             && (game.getPhase() != IGame.Phase.PHASE_TARGETING)
             && (game.getPhase() != IGame.Phase.PHASE_OFFBOARD)) {
-            logError(METHOD_NAME, "server got attack packet in wrong phase");
+            getLogger().error(getClass(), METHOD_NAME, "server got attack packet in wrong phase");
             return;
         }
 
@@ -13954,7 +13902,7 @@ public class Server extends SocketServer {
             } else {
                 msg += ", Entity was null!";
             }
-            logError(METHOD_NAME, msg);
+            getLogger().error(getClass(), METHOD_NAME, msg);
             send(connId, createTurnVectorPacket());
             send(connId, createTurnIndexPacket(turn.getPlayerNum()));
             return;
@@ -13989,7 +13937,7 @@ public class Server extends SocketServer {
         for (EntityAction ea : vector) {
             // is this the right entity?
             if (ea.getEntityId() != entity.getId()) {
-                logError(METHOD_NAME, "attack packet has wrong attacker");
+                getLogger().error(getClass(), METHOD_NAME, "attack packet has wrong attacker");
                 continue;
             }
             if (ea instanceof PushAttackAction) {
@@ -14124,7 +14072,7 @@ public class Server extends SocketServer {
                         });
                 Vector<Integer> spotterIds = new Vector<Integer>();
                 while (spotters.hasNext()) {
-                    Integer id = new Integer(spotters.next().getId());
+                    Integer id = Integer.valueOf(spotters.next().getId());
                     spotterIds.addElement(id);
                 }
                 aaa.setSpotterIds(spotterIds);
@@ -14212,7 +14160,7 @@ public class Server extends SocketServer {
 
         //This should be impossible but just in case...
         if (!(taa instanceof TeleMissileAttackAction)) {
-            logInfo(METHOD_NAME, "Attack Action is the wrong type!");
+            getLogger().info(getClass(), METHOD_NAME, "Attack Action is the wrong type!");
         }
 
         Entity target = (taa.getTargetType() == Targetable.TYPE_ENTITY) ? (Entity) taa
@@ -14220,7 +14168,7 @@ public class Server extends SocketServer {
 
         //If a telemissile is still on the board and its original target is not....
         if (target == null) {
-            logInfo(METHOD_NAME, "Telemissile has no target. AMS not assigned.");
+            getLogger().info(getClass(), METHOD_NAME, "Telemissile has no target. AMS not assigned.");
             return;
         }
 
@@ -14260,7 +14208,7 @@ public class Server extends SocketServer {
             // might no longer be in the game.
             //TODO: Yeah, I know there's an exploit here, but better able to shoot some ArrowIVs than none, right?
             if (game.getEntity(waa.getEntityId()) == null) {
-                logInfo(METHOD_NAME, "Can't Assign AMS: Artillery firer is null!");
+                getLogger().info(getClass(), METHOD_NAME, "Can't Assign AMS: Artillery firer is null!");
                 continue;
             }
 
@@ -14451,7 +14399,7 @@ public class Server extends SocketServer {
                     int cfrType = (int) rp.packet.getData()[0];
                     // Make sure we got the right type of response
                     if (cfrType != Packet.COMMAND_CFR_APDS_ASSIGN) {
-                        logError(METHOD_NAME,"Expected a COMMAND_CFR_AMS_ASSIGN CFR packet, received: " + cfrType);
+                        getLogger().error(getClass(), METHOD_NAME,"Expected a COMMAND_CFR_AMS_ASSIGN CFR packet, received: " + cfrType);
                         throw new IllegalStateException();
                     }
                     Integer waaIndex =
@@ -14532,7 +14480,7 @@ public class Server extends SocketServer {
                         int cfrType = (int) rp.packet.getData()[0];
                         // Make sure we got the right type of response
                         if (cfrType != Packet.COMMAND_CFR_AMS_ASSIGN) {
-                            logError(METHOD_NAME,
+                            getLogger().error(getClass(), METHOD_NAME,
                                     "Expected a COMMAND_CFR_AMS_ASSIGN CFR packet, received: " + cfrType);
                             throw new IllegalStateException();
                         }
@@ -14877,7 +14825,7 @@ public class Server extends SocketServer {
                     triggerAPPod(entity, tapa.getPodId());
                     triggerPodActions.addElement(tapa);
                 } else {
-                    logError(METHOD_NAME,
+                    getLogger().error(getClass(), METHOD_NAME,
                             "AP Pod #" + tapa.getPodId() + " on " + entity.getDisplayName()
                                     + " was already triggered this round!!");
                 }
@@ -14890,7 +14838,7 @@ public class Server extends SocketServer {
                                 game.getEntity(tba.getTargetId()));
                     triggerPodActions.addElement(tba);
                 } else {
-                    logError(METHOD_NAME,
+                    getLogger().error(getClass(), METHOD_NAME,
                             "B Pod #" + tba.getPodId() + " on " + entity.getDisplayName()
                                     + " was already triggered this round!!");
                 }
@@ -14906,7 +14854,7 @@ public class Server extends SocketServer {
                     r.addDesc(entity);
                     addReport(r);
                 } else {
-                    logError(METHOD_NAME, "Non-Tank tried to unjam turret");
+                    getLogger().error(getClass(), METHOD_NAME, "Non-Tank tried to unjam turret");
                 }
             } else if (ea instanceof RepairWeaponMalfunctionAction) {
                 if (entity instanceof Tank) {
@@ -14921,7 +14869,7 @@ public class Server extends SocketServer {
                     r.add(m.getName());
                     addReport(r);
                 } else {
-                    logError(METHOD_NAME, "Non-Tank tried to repair weapon malfunction");
+                    getLogger().error(getClass(), METHOD_NAME, "Non-Tank tried to repair weapon malfunction");
                 }
             }
         }
@@ -15129,14 +15077,14 @@ public class Server extends SocketServer {
 
         // Confirm that this is, indeed, an AP Pod.
         if (null == mount) {
-            logError(METHOD_NAME,
+            getLogger().error(getClass(), METHOD_NAME,
                     "Expecting to find an AP Pod at " + podId + " on the unit, " + entity.getDisplayName()
                             + " but found NO equipment at all!!!");
             return;
         }
         EquipmentType equip = mount.getType();
         if (!(equip instanceof MiscType) || !equip.hasFlag(MiscType.F_AP_POD)) {
-            logError(METHOD_NAME,
+            getLogger().error(getClass(), METHOD_NAME,
                     "Expecting to find an AP Pod at " + podId + " on the unit, "+ entity.getDisplayName()
                             + " but found " + equip.getName() + " instead!!!");
             return;
@@ -15149,7 +15097,7 @@ public class Server extends SocketServer {
         boolean canFire = mount.canFire();
         mount.setUsedThisRound(oldFired);
         if (!canFire) {
-            logError(METHOD_NAME, "Can not trigger the AP Pod at " + podId + " on the unit, "
+            getLogger().error(getClass(), METHOD_NAME, "Can not trigger the AP Pod at " + podId + " on the unit, "
                     + entity.getDisplayName() + "!!!");
             return;
         }
@@ -15210,14 +15158,14 @@ public class Server extends SocketServer {
 
         // Confirm that this is, indeed, an Anti-BA Pod.
         if (null == mount) {
-            logError(METHOD_NAME, "Expecting to find an B Pod at " + podId + " on the unit, "
+            getLogger().error(getClass(), METHOD_NAME, "Expecting to find an B Pod at " + podId + " on the unit, "
                     + entity.getDisplayName() + " but found NO equipment at all!!!");
             return;
         }
         EquipmentType equip = mount.getType();
         if (!(equip instanceof WeaponType)
             || !equip.hasFlag(WeaponType.F_B_POD)) {
-            logError(METHOD_NAME, "Expecting to find an B Pod at " + podId + " on the unit, "
+            getLogger().error(getClass(), METHOD_NAME, "Expecting to find an B Pod at " + podId + " on the unit, "
                     + entity.getDisplayName() + " but found " + equip.getName() + " instead!!!");
             return;
         }
@@ -15229,7 +15177,7 @@ public class Server extends SocketServer {
         boolean canFire = mount.canFire();
         mount.setUsedThisRound(oldFired);
         if (!canFire) {
-            logError(METHOD_NAME, "Can not trigger the B Pod at " + podId + " on the unit, "
+            getLogger().error(getClass(), METHOD_NAME, "Can not trigger the B Pod at " + podId + " on the unit, "
                     + entity.getDisplayName() + "!!!");
             return;
         }
@@ -15828,7 +15776,7 @@ public class Server extends SocketServer {
                     allowed--;
                 }
             } else {
-                logError(METHOD_NAME, "removing duplicate phys attack for id#" + entityId
+                getLogger().error(getClass(), METHOD_NAME, "removing duplicate phys attack for id#" + entityId
                                 + "\n\t\taction was " + action.toString());
             }
         }
@@ -19916,7 +19864,7 @@ public class Server extends SocketServer {
                 } else if (entity instanceof Aero) {
                     radicalHSBonus = ((Aero) entity).getHeatSinks();
                 } else {
-                    logError(METHOD_NAME, "Radical heatsinks mounted on non-mech, non-aero Entity!");
+                    getLogger().error(getClass(), METHOD_NAME, "Radical heatsinks mounted on non-mech, non-aero Entity!");
                 }
                 int rhsRoll = Compute.d6(2);
                 int targetNumber = 2;
@@ -26743,9 +26691,19 @@ public class Server extends SocketServer {
             case Aero.CRIT_WEAPON:
                 if (aero.isCapitalFighter()) {
                     boolean destroyAll = false;
+                    // CRIT_WEAPON damages the capital fighter/squadron's weapon groups
+                    // Go ahead and map damage for the fighter's weapon criticals for MHQ
+                    // resolution.
+                    aero.damageCapFighterWeapons(loc);
                     if ((loc == Aero.LOC_NOSE) || (loc == Aero.LOC_AFT)) {
                         destroyAll = true;
                     }
+                    
+                    // Convert L/R wing location to wings, else wing weapons never get hit
+                    if (loc == Aero.LOC_LWING || loc == Aero.LOC_RWING) {
+                        loc = Aero.LOC_WINGS;
+                    }
+                    
                     if (loc == Aero.LOC_WINGS) {
                         if (aero.areWingsHit()) {
                             destroyAll = true;
@@ -26762,12 +26720,28 @@ public class Server extends SocketServer {
                             }
                         }
                     }
-                    // also destroy any ECM or BAP in this location
+                    // also destroy any ECM or BAP in the location hit
                     for (Mounted misc : aero.getMisc()) {
-                        if (misc.getType().hasFlag(MiscType.F_ECM)
+                        if ((misc.getType().hasFlag(MiscType.F_ECM)
                             || misc.getType().hasFlag(MiscType.F_ANGEL_ECM)
-                            || misc.getType().hasFlag(MiscType.F_BAP)) {
+                            || misc.getType().hasFlag(MiscType.F_BAP))
+                                && misc.getLocation() == loc) {
                             misc.setHit(true);
+                            //Taharqa: We should also damage the critical slot, or
+                            //MM and MHQ won't remember that this weapon is damaged on the MUL
+                            //file
+                            for (int i = 0; i < aero.getNumberOfCriticals(loc); i++) {
+                                CriticalSlot slot1 = aero.getCritical(loc, i);
+                                if ((slot1 == null) ||
+                                        (slot1.getType() == CriticalSlot.TYPE_SYSTEM)) {
+                                    continue;
+                                }
+                                Mounted mounted = slot1.getMount();
+                                if (mounted.equals(misc)) {
+                                    aero.hitAllCriticals(loc, i);
+                                    break;
+                                }
+                            }
                         }
                     }
                     r = new Report(9152);
@@ -29245,7 +29219,7 @@ public class Server extends SocketServer {
         Vector<Report> vDesc = new Vector<Report>();
         // is this already destroyed?
         if (mounted.isDestroyed()) {
-            logError(METHOD_NAME, "Called on destroyed equipment(" + mounted.getName() + ")");
+            getLogger().error(getClass(), METHOD_NAME, "Called on destroyed equipment(" + mounted.getName() + ")");
             return vDesc;
         }
 
@@ -29717,7 +29691,7 @@ public class Server extends SocketServer {
                 && (bldg.getBasementCollapsed(fallPos) == true)) {
 
                 if (fallHex.depth(true) == 0) {
-                    logError(METHOD_NAME, "Entity " + entity.getDisplayName() + " is falling into a depth "
+                    getLogger().error(getClass(), METHOD_NAME, "Entity " + entity.getDisplayName() + " is falling into a depth "
                             + fallHex.depth(true) + " basement -- not allowed!!");
                     return vPhaseReport;
                 }
@@ -30489,7 +30463,7 @@ public class Server extends SocketServer {
                         sizes.add(Board.getSize(query_file));
                     }
                 } catch (Exception e) {
-                    logError("getBoardSizesInDir(File,TreeSet<BoardDimensions>)",
+                    getLogger().error(getClass(), "getBoardSizesInDir(File,TreeSet<BoardDimensions>)",
                             "Error parsing board: " + query_file.getAbsolutePath(), e);
                 }
             }
@@ -30593,10 +30567,10 @@ public class Server extends SocketServer {
         Entity eTarget = game.getEntity(nEntityID);
         if (eTarget == null) {
             if (game.getOutOfGameEntity(nEntityID) != null) {
-                logError(METHOD_NAME,
+                getLogger().error(getClass(), METHOD_NAME,
                         "S: attempted to send entity update for out of game entity, id was " + nEntityID);
             } else {
-                logError(METHOD_NAME, "S: attempted to send entity update for null entity, id was " + nEntityID);
+                getLogger().error(getClass(), METHOD_NAME, "S: attempted to send entity update for null entity, id was " + nEntityID);
             }
 
             return; // do not send the update it will crash the client
@@ -31031,7 +31005,7 @@ public class Server extends SocketServer {
         if ((r.subject == Entity.NONE) && (r.type != Report.PLAYER)
             && (r.type != Report.PUBLIC)) {
             // Reports that don't have a subject should be public.
-            logError(METHOD_NAME,
+            getLogger().error(getClass(), METHOD_NAME,
                     "Attempting to filter a Report object that is not public yet "
                             + "but has no subject.\n\t\tmessageId: " + r.messageId);
             return r;
@@ -31054,7 +31028,7 @@ public class Server extends SocketServer {
 
         if ((r.type != Report.PLAYER) && !omitCheck
             && ((entity == null) || (owner == null))) {
-            logError(METHOD_NAME,
+            getLogger().error(getClass(), METHOD_NAME,
                     "Attempting to filter a report object that is not public but has a subject ("
                             + entity + ") with owner (" + owner + ").\n\tmessageId: " + r.messageId);
             return r;
@@ -31252,7 +31226,7 @@ public class Server extends SocketServer {
                         TechConstants.getGameTechLevel(game, entity.isClan()))) {
                     entity.setDesignValid(true);
                 } else {
-                    logError(METHOD_NAME, sb.toString());
+                    getLogger().error(getClass(), METHOD_NAME, sb.toString());
                     if (game.getOptions().booleanOption(OptionsConstants.ALLOWED_ALLOW_ILLEGAL_UNITS)) {
                         entity.setDesignValid(false);
                     } else {
@@ -31543,21 +31517,21 @@ public class Server extends SocketServer {
                 if (!m.setMode(mode)) {
                     String message = e.getShortName() + ": " + m.getName() + ": " + e.getLocationName(m.getLocation())
                             + " trying to compensate";
-                    logError(METHOD_NAME, message);
+                    getLogger().error(getClass(), METHOD_NAME, message);
                     sendServerChat(message);
                     e.setGameOptions();
 
                     if (!m.setMode(mode)) {
                         message = e.getShortName() + ": " + m.getName() + ": " + e.getLocationName(m.getLocation())
                                 + " unable to compensate";
-                        logError(METHOD_NAME, message);
+                        getLogger().error(getClass(), METHOD_NAME, message);
                         sendServerChat(message);
                     }
 
                 }
             }
         } catch (Exception ex) {
-            logError(METHOD_NAME, ex);
+            getLogger().error(getClass(), METHOD_NAME, ex);
         }
 
     }
@@ -31593,7 +31567,7 @@ public class Server extends SocketServer {
         IGame.Phase phase = (IGame.Phase)c.getObject(1);
         Entity e = game.getEntity(entityId);
         if (connIndex != e.getOwnerId()) {
-            logError("receiveEntityActivateHidden(Packet,int)",
+            getLogger().error(getClass(), "receiveEntityActivateHidden(Packet,int)",
                     "Player " + connIndex + " tried to activate a hidden unit owned by Player " + e.getOwnerId());
             return;
         }
@@ -31706,12 +31680,12 @@ public class Server extends SocketServer {
 
         // Did we receive a request for a valid Entity?
         if (null == e) {
-            logError(METHOD_NAME, "could not find entity# " + entityId);
+            getLogger().error(getClass(), METHOD_NAME, "could not find entity# " + entityId);
             return;
         }
         IPlayer player = getPlayer(connIndex);
         if ((null != player) && (e.getOwner() != player)) {
-            logError(METHOD_NAME, "player " + player.getName() + " does not own the entity " + e.getDisplayName());
+            getLogger().error(getClass(), METHOD_NAME, "player " + player.getName() + " does not own the entity " + e.getDisplayName());
             return;
         }
 
@@ -31719,31 +31693,31 @@ public class Server extends SocketServer {
         Mounted mWeap = e.getEquipment(weaponId);
         Mounted mAmmo = e.getEquipment(ammoId);
         if (null == mAmmo) {
-            logError(METHOD_NAME, "entity " + e.getDisplayName() + " does not have ammo #" + ammoId);
+            getLogger().error(getClass(), METHOD_NAME, "entity " + e.getDisplayName() + " does not have ammo #" + ammoId);
             return;
         }
         if (!(mAmmo.getType() instanceof AmmoType)) {
-            logError(METHOD_NAME, "item #" + ammoId + " of entity " + e.getDisplayName()
+            getLogger().error(getClass(), METHOD_NAME, "item #" + ammoId + " of entity " + e.getDisplayName()
                     + " is a " + mAmmo.getName() + " and not ammo.");
             return;
         }
         if (null == mWeap) {
-            logError(METHOD_NAME, "entity " + e.getDisplayName() + " does not have weapon #" + weaponId);
+            getLogger().error(getClass(), METHOD_NAME, "entity " + e.getDisplayName() + " does not have weapon #" + weaponId);
             return;
         }
         if (!(mWeap.getType() instanceof WeaponType)) {
-            logError(METHOD_NAME, "item #" + weaponId + " of entity " + e.getDisplayName()
+            getLogger().error(getClass(), METHOD_NAME, "item #" + weaponId + " of entity " + e.getDisplayName()
                     + " is a " + mWeap.getName() + " and not a weapon.");
             return;
         }
         if (((WeaponType) mWeap.getType()).getAmmoType() == AmmoType.T_NA) {
-            logError(METHOD_NAME, "item #" + weaponId + " of entity " + e.getDisplayName()
+            getLogger().error(getClass(), METHOD_NAME, "item #" + weaponId + " of entity " + e.getDisplayName()
                     + " is a " + mWeap.getName() + " and does not use ammo.");
             return;
         }
         if (((WeaponType) mWeap.getType()).hasFlag(WeaponType.F_ONESHOT)
                 && !((WeaponType) mWeap.getType()).hasFlag(WeaponType.F_DOUBLE_ONESHOT)) {
-            logError(METHOD_NAME, "item #" + weaponId + " of entity " + e.getDisplayName()
+            getLogger().error(getClass(), METHOD_NAME, "item #" + weaponId + " of entity " + e.getDisplayName()
                     + " is a " + mWeap.getName() + " and cannot use external ammo.");
             return;
         }
@@ -31869,7 +31843,7 @@ public class Server extends SocketServer {
                 message.append(player.getName());
             }
             message.append(" is not allowed to ask for a reroll at this time.");
-            logError(METHOD_NAME, message.toString());
+            getLogger().error(getClass(), METHOD_NAME, message.toString());
             sendServerChat(message.toString());
             return;
         }
@@ -31893,7 +31867,7 @@ public class Server extends SocketServer {
         IPlayer player = game.getPlayer(connId);
         // Check player
         if (null == player) {
-            logError(METHOD_NAME, "Server does not recognize player at connection " + connId);
+            getLogger().error(getClass(), METHOD_NAME, "Server does not recognize player at connection " + connId);
             return false;
         }
 
@@ -32000,7 +31974,7 @@ public class Server extends SocketServer {
      */
     private Packet createPlayerConnectPacket(int playerId) {
         final Object[] data = new Object[2];
-        data[0] = new Integer(playerId);
+        data[0] = Integer.valueOf(playerId);
         data[1] = getPlayer(playerId);
         return new Packet(Packet.COMMAND_PLAYER_ADD, data);
     }
@@ -32010,7 +31984,7 @@ public class Server extends SocketServer {
      */
     private Packet createPlayerUpdatePacket(int playerId) {
         final Object[] data = new Object[2];
-        data[0] = new Integer(playerId);
+        data[0] = Integer.valueOf(playerId);
         data[1] = getPlayer(playerId);
         return new Packet(Packet.COMMAND_PLAYER_UPDATE, data);
     }
@@ -32043,7 +32017,7 @@ public class Server extends SocketServer {
      */
     private Packet createPlayerDonePacket(int playerId) {
         Object[] data = new Object[2];
-        data[0] = new Integer(playerId);
+        data[0] = Integer.valueOf(playerId);
         data[1] = Boolean.valueOf(getPlayer(playerId).isDone());
         return new Packet(Packet.COMMAND_PLAYER_READY, data);
     }
@@ -32060,7 +32034,7 @@ public class Server extends SocketServer {
      */
     private Packet createTurnIndexPacket(int playerId) {
         final Object[] data = new Object[3];
-        data[0] = new Integer(game.getTurnIndex());
+        data[0] = Integer.valueOf(game.getTurnIndex());
         data[1] = playerId;
         return new Packet(Packet.COMMAND_TURN, data);
     }
@@ -32107,7 +32081,7 @@ public class Server extends SocketServer {
             Vector<UnitLocation> movePath) {
         final Entity entity = game.getEntity(entityId);
         final Object[] data = new Object[3];
-        data[0] = new Integer(entityId);
+        data[0] = Integer.valueOf(entityId);
         data[1] = entity;
         data[2] = movePath;
         return new Packet(Packet.COMMAND_ENTITY_UPDATE, data);
@@ -32265,7 +32239,7 @@ public class Server extends SocketServer {
         }
         Object[] array = new Object[2];
         array[0] = entityIds;
-        array[1] = new Integer(condition);
+        array[1] = Integer.valueOf(condition);
         return new Packet(Packet.COMMAND_ENTITY_REMOVE, array);
     }
 
@@ -32275,8 +32249,8 @@ public class Server extends SocketServer {
     private Packet createEndOfGamePacket() {
         Object[] array = new Object[3];
         array[0] = getDetailedVictoryReport();
-        array[1] = new Integer(game.getVictoryPlayerId());
-        array[2] = new Integer(game.getVictoryTeam());
+        array[1] = Integer.valueOf(game.getVictoryPlayerId());
+        array[2] = Integer.valueOf(game.getVictoryTeam());
         return new Packet(Packet.COMMAND_END_OF_GAME, array);
     }
 
@@ -32372,7 +32346,7 @@ public class Server extends SocketServer {
 
     public void sendVisibilityIndicator(Entity e) {
         final Object[] data = new Object[6];
-        data[0] = new Integer(e.getId());
+        data[0] = Integer.valueOf(e.getId());
         data[1] = Boolean.valueOf(e.isEverSeenByEnemy());
         data[2] = Boolean.valueOf(e.isVisibleToEnemy());
         data[3] = Boolean.valueOf(e.isDetectedByEnemy());
@@ -32387,7 +32361,7 @@ public class Server extends SocketServer {
     private Packet createAttackPacket(List<?> vector, int charges) {
         final Object[] data = new Object[2];
         data[0] = vector;
-        data[1] = new Integer(charges);
+        data[1] = Integer.valueOf(charges);
         return new Packet(Packet.COMMAND_ENTITY_ATTACK, data);
     }
 
@@ -32399,7 +32373,7 @@ public class Server extends SocketServer {
         vector.addElement(ea);
         Object[] data = new Object[2];
         data[0] = vector;
-        data[1] = new Integer(charge);
+        data[1] = Integer.valueOf(charge);
         return new Packet(Packet.COMMAND_ENTITY_ATTACK, data);
     }
 
@@ -32484,7 +32458,7 @@ public class Server extends SocketServer {
 
     // WOR
     public void send_Nova_Change(int ID, String net) {
-        Object[] data = {new Integer(ID), new String(net)};
+        Object[] data = {Integer.valueOf(ID), new String(net)};
         Packet packet = new Packet(Packet.COMMAND_ENTITY_NOVA_NETWORK_CHANGE,
                                    data);
         send(packet);
@@ -32595,13 +32569,13 @@ public class Server extends SocketServer {
         IPlayer player = game.getPlayer(connId);
         // Check player. Please note, the connection may be pending.
         if ((null == player) && (null == getPendingConnection(connId))) {
-            logError(METHOD_NAME, "Server does not recognize player at connection " + connId);
+            getLogger().error(getClass(), METHOD_NAME, "Server does not recognize player at connection " + connId);
             return;
         }
 
         // System.out.println("s(" + cn + "): received command");
         if (packet == null) {
-            logError(METHOD_NAME, "Got null packet");
+            getLogger().error(getClass(), METHOD_NAME, "Got null packet");
             return;
         }
         // act on it
@@ -32848,7 +32822,7 @@ public class Server extends SocketServer {
                         sendCurrentInfo(conn.getId());
                     }
                 } catch (Exception e) {
-                    logError(METHOD_NAME, "Error loading savegame sent from client", e);
+                    getLogger().error(getClass(), METHOD_NAME, "Error loading savegame sent from client", e);
                 }
                 break;
             case Packet.COMMAND_SQUADRON_ADD:
@@ -32880,7 +32854,7 @@ public class Server extends SocketServer {
     @Override
     protected void onListen() {
         final String METHOD_NAME = "onListen()";
-        logInfo(METHOD_NAME, "s: listening for clients...");
+        getLogger().info(getClass(), METHOD_NAME, "s: listening for clients...");
     }
 
     /**
@@ -32892,7 +32866,7 @@ public class Server extends SocketServer {
         synchronized(serverLock) {
             final String METHOD_NAME = "onConnectionOpen()";
             int id = getFreeConnectionId();
-            logInfo(METHOD_NAME, "s: accepting player connection #" + id + "...");
+                    getLogger().info(getClass(), METHOD_NAME, "s: accepting player connection #" + id + "...");
 
             connection.setId(id);
             connection.open();
@@ -33465,7 +33439,7 @@ public class Server extends SocketServer {
                 numLoads++;
             }
             if (numLoads < 1) {
-                logError(METHOD_NAME, "Check for collapse: hex " + coords.toString() + " has no bridge or building");
+                getLogger().error(getClass(), METHOD_NAME, "Check for collapse: hex " + coords.toString() + " has no bridge or building");
                 return false;
             }
 
@@ -33683,7 +33657,7 @@ public class Server extends SocketServer {
                 // fall into basement
                 if ((bldg.getBasement(coords) == BasementType.TWO_DEEP_HEAD)
                     || (bldg.getBasement(coords) == BasementType.TWO_DEEP_FEET)) {
-                    logError(METHOD_NAME, entity.getDisplayName() + " is falling 2 floors into " + coords.toString());
+                    getLogger().error(getClass(), METHOD_NAME, entity.getDisplayName() + " is falling 2 floors into " + coords.toString());
                     // Damage is determined by the depth of the basement, so a
                     //  fall of 0 elevation is correct in this case
                     vPhaseReport.addAll(doEntityFall(entity, coords, 0,
@@ -33691,14 +33665,14 @@ public class Server extends SocketServer {
                     runningCFTotal -= cfDamage * 2;
                 } else if ((bldg.getBasement(coords) != BasementType.NONE)
                            && (bldg.getBasement(coords) != BasementType.ONE_DEEP_NORMALINFONLY)) {
-                    logError(METHOD_NAME, entity.getDisplayName() + " is falling 1 floor into " + coords.toString());
+                    getLogger().error(getClass(), METHOD_NAME, entity.getDisplayName() + " is falling 1 floor into " + coords.toString());
                     // Damage is determined by the depth of the basement, so a
                     //  fall of 0 elevation is correct in this case
                     vPhaseReport.addAll(doEntityFall(entity, coords, 0,
                                                      Compute.d6(), psr, true));
                     runningCFTotal -= cfDamage;
                 } else {
-                    logError(METHOD_NAME, entity.getDisplayName() + " is not falling into " + coords.toString());
+                    getLogger().error(getClass(), METHOD_NAME, entity.getDisplayName() + " is not falling into " + coords.toString());
                 }
 
                 // Update this entity.
@@ -34371,7 +34345,7 @@ public class Server extends SocketServer {
 
         // Is this the right phase?
         if (game.getPhase() != IGame.Phase.PHASE_MOVEMENT) {
-            logError(METHOD_NAME, "server got unload stranded packet in wrong phase");
+            getLogger().error(getClass(), METHOD_NAME, "server got unload stranded packet in wrong phase");
             return;
         }
 
@@ -34379,14 +34353,14 @@ public class Server extends SocketServer {
         if (game.getTurn() instanceof GameTurn.UnloadStrandedTurn) {
             turn = (GameTurn.UnloadStrandedTurn) game.getTurn();
         } else {
-            logError(METHOD_NAME, "server got unload stranded packet out of sequence");
+            getLogger().error(getClass(), METHOD_NAME, "server got unload stranded packet out of sequence");
             sendServerChat(player.getName() + " should not be sending 'unload stranded entity' packets at this time.");
             return;
         }
 
         // Can this player act right now?
         if (!turn.isValid(connId, game)) {
-            logError(METHOD_NAME, "server got unload stranded packet from invalid player");
+            getLogger().error(getClass(), METHOD_NAME, "server got unload stranded packet from invalid player");
             sendServerChat(player.getName() + " should not be sending 'unload stranded entity' packets.");
             return;
         }
@@ -34399,7 +34373,7 @@ public class Server extends SocketServer {
         while (pending.hasMoreElements()) {
             action = (UnloadStrandedAction) pending.nextElement();
             if (action.getPlayerId() == connId) {
-                logError(METHOD_NAME, "server got multiple unload stranded packets from player");
+                getLogger().error(getClass(), METHOD_NAME, "server got multiple unload stranded packets from player");
                 sendServerChat(player.getName() + " should not send multiple 'unload stranded entity' packets.");
                 return;
             }
@@ -34416,7 +34390,7 @@ public class Server extends SocketServer {
         for (int index = 0; (null != entityIds) && (index < entityIds.length); index++) {
             entity = game.getEntity(entityIds[index]);
             if (!game.getTurn().isValid(connId, entity, game)) {
-                logError(METHOD_NAME, "server got unload stranded packet for invalid entity");
+                getLogger().error(getClass(), METHOD_NAME, "server got unload stranded packet for invalid entity");
                 StringBuilder message = new StringBuilder();
                 message.append(player.getName()).append(
                         " can not unload stranded entity ");
@@ -34466,7 +34440,7 @@ public class Server extends SocketServer {
                 entity = game.getEntity(action.getEntityId());
                 if (null == entity) {
                     // After all this, we couldn't find the entity!!!
-                    logError(METHOD_NAME, "server could not find stranded entity #"
+                    getLogger().error(getClass(), METHOD_NAME, "server could not find stranded entity #"
                             + action.getEntityId() + " to unload!!!");
                 } else {
                     // Unload the entity. Get the unit's transporter.
@@ -34516,6 +34490,13 @@ public class Server extends SocketServer {
         // squadron
         if (target instanceof FighterSquadron) {
             return;
+        }
+        // If a squadron scores a kill, assign it randomly to one of the member fighters
+        if (attacker instanceof FighterSquadron) {
+            Entity killer = attacker.getLoadedUnits().get(Compute.randomInt(attacker.getLoadedUnits().size()));
+            if (killer != null) {
+                attacker = killer;
+            }
         }
         if ((target.isDoomed() || target.getCrew().isDoomed())
             && !target.getGaveKillCredit() && (attacker != null)) {
@@ -34842,7 +34823,7 @@ public class Server extends SocketServer {
                                 step, moveType));
                     }
                 } else if (moveType == EntityMovementType.MOVE_JUMP) {
-                    logError(METHOD_NAME, "gravity move check jump: "
+                    getLogger().error(getClass(), METHOD_NAME, "gravity move check jump: "
                             + step.getMpUsed() + "/" + cachedMaxMPExpenditure);
                     // TODO: Don't know if this still needs to be here after updating for new logging system.
                     System.err.flush();
@@ -35149,7 +35130,7 @@ public class Server extends SocketServer {
             // Cannot abandon if there is no legal hex.  This shoudln't have
             // been allowed
             if (legalPosition == null) {
-                logError(METHOD_NAME, "vehicle crews cannot abandon if there is no legal hex!");
+                getLogger().error(getClass(), METHOD_NAME, "vehicle crews cannot abandon if there is no legal hex!");
                 return vDesc;
             }
             crew.setPosition(legalPosition);
@@ -35631,11 +35612,11 @@ public class Server extends SocketServer {
             Entity entity = stuckEntities.next();
             if (entity.getPosition() == null) {
                 if (entity.isDeployed()) {
-                    logInfo(METHOD_NAME, "Entity #" + entity.getId() + " does not know its position.");
+                    getLogger().info(getClass(), METHOD_NAME, "Entity #" + entity.getId() + " does not know its position.");
                 } else { // If the Entity isn't deployed, then something goofy
                     // happened.  We'll just unstuck the Entity
                     entity.setStuck(false);
-                    logInfo(METHOD_NAME, "Entity #" + entity.getId() + " was stuck in a swamp, but not deployed. Stuck state reset");
+                    getLogger().info(getClass(), METHOD_NAME, "Entity #" + entity.getId() + " was stuck in a swamp, but not deployed. Stuck state reset");
                 }
                 continue;
             }
@@ -36145,7 +36126,8 @@ public class Server extends SocketServer {
         r.choose(roll >= psr.getValue());
         addReport(r);
 
-        if (game.getBoard().inAtmosphere()) {
+        // if we are on an atmospheric map or the entity is off the map for some reason
+        if (game.getBoard().inAtmosphere() || entity.getPosition() == null) {
             // then just remove the entity
             // TODO: for this and when the unit scatters off the board, we
             // should really still apply damage
